--- a/webdemo/hr/templates/add_employee.html
+++ b/webdemo/hr/templates/add_employee.html
@@ -8,7 +8,8 @@
 
 <h1>Add Employee</h1>
 
-<form>
+<form method="post">
+    {% csrf_token %}
     Fullname <br/>
     <input type="text" name="fullname" size="30" required/>
     <p></p>
